cleaned up spacing issues on company admin info card and employee info card components and added grid display instead of flex

--- a/src/assets/styles/CompaniesDetail.css
+++ b/src/assets/styles/CompaniesDetail.css
@@ -25,6 +25,7 @@
 .CompanyInfoCard--company-id-display label,
 .CompanyInfoCard--company-id-display span {
   font-weight: 300;
+  margin-right: 5px;
 }
 
 .CompanyInfoCard--company-id-display {
